Added missing ; to script

--- a/undervisningsopgaver/01-js-basics/10-type_af_klimasynder_interaktiv.html
+++ b/undervisningsopgaver/01-js-basics/10-type_af_klimasynder_interaktiv.html
@@ -15,7 +15,7 @@
 	<button>Udregn CO2 udledning</button>
 
 	<script>
-		document.querySelector("button").addEventListener("click", buttonClick)
+		document.querySelector("button").addEventListener("click", buttonClick);
 
 		function buttonClick() {
 			let length = document.querySelector("#length").value;
