Changed let to const

--- a/undervisningsopgaver/02-js-DOM/02-select.html
+++ b/undervisningsopgaver/02-js-DOM/02-select.html
@@ -77,39 +77,39 @@
 
 	<script>
 		// Tager fat i h1 i header
-		let h1 = document.querySelector("h1");
+		const h1 = document.querySelector("h1");
 		console.log("H1");
 
 		// Tager fat i h2 under header
-		let h2 = document.querySelector("h2");
+		const h2 = document.querySelector("h2");
 		console.log("H2");
 
 		// Tager fat i billede i artikel 1
-		let firstImg = document.querySelector("article img");
+		const firstImg = document.querySelector("article img");
 		console.log("First image");
 
 		// Tager fat i h3 i artikel 1
-		let firstH3 = document.querySelector("article h3");
+		const firstH3 = document.querySelector("article h3");
 		console.log("First H3");
 
 		// Tager fat i p i artikel 1
-		let firstP = document.querySelector("article p");
+		const firstP = document.querySelector("article p");
 		console.log("First paragraph");
 
 		// Tager fat i billede i artikel 2
-		let secondImg = document.querySelector("article:nth-child(2) img");
+		const secondImg = document.querySelector("article:nth-child(2) img");
 		console.log("Second image");
 
 		// Tager fat i h3 i artikel 2
-		let secondH3 = document.querySelector("article:nth-child(2) h3");
+		const secondH3 = document.querySelector("article:nth-child(2) h3");
 		console.log("Second H3");
 
 		// Tager fat i p i artikel 2
-		let secondP = document.querySelector("article:nth-child(2) p");
+		const secondP = document.querySelector("article:nth-child(2) p");
 		console.log("Second paragraph");
 
 		// Tager fat i footer tekst
-		let footerText = document.querySelector("footer p");
+		const footerText = document.querySelector("footer p");
 		console.log("Footer text");
 
 	</script>
