--- a/undervisningsopgaver/03-js-object/06-visMedTemplate.html
+++ b/undervisningsopgaver/03-js-object/06-visMedTemplate.html
@@ -79,7 +79,7 @@
 				clone.querySelector("img").src = dyr.billede;
 				clone.querySelector(".type").textContent = dyr.type;
 				clone.querySelector(".levested").textContent = dyr.levested;
-				list.appendChild(clone);
+				list.appendChild(cloned);
 			})
 
 		}
