Removal of article class - not needed

--- a/undervisningsopgaver/03-js-object/06-visMedTemplate.html
+++ b/undervisningsopgaver/03-js-object/06-visMedTemplate.html
@@ -28,7 +28,7 @@
 	<section id="liste"></section>
 
 	<template>
-		<article class="dyr">
+		<article>
 			<h3></h3>
 			<img src="" alt="">
 			<p class="type"></p>
